--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="catalog-header">
 <!--Логотип-->
     <a class="top-header-logo" href="infex.html">
-      <img src="#" width="100" height="100" alt="Логотип Техномарт">
+      <img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип Техномарт">
     </a>
 <!--Поиск-->
   <form action="" method="get">
@@ -50,7 +50,8 @@
      <li class="breadcrumbs-current">Перфораторы</li>
    </ul>
 <!--Фильрт-слайдер-->
-
+ <section class="range-slider">
+ </section>
 <!--Фильтры-->
   <h2>Перфораторы</h2>
     <section class="filters">
@@ -105,45 +106,45 @@
     <ul class="catalog-goods-list">
        <li class="catalog-goods-item">
           <h3>Перфоратор BOSCH BFG 3000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/item-image_3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
            <span class="catalog-old-price"><span>22500</span>Р.</span>
            <span class="catalog-new-price">15500 Р.</span>
        </li>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <img src="img/item-image_6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
            <span class="catalog-old-price"><span>30500</span>Р.</span>
            <span class="catalog-new-price"><span>25500</span>Р.</span>
        </li>
           <h3>Перфоратор BOSCH BFG 2000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 2000">
+           <img src="img/item-image_2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
            <span class="catalog-new-price"><span>12500</span>Р.</span>
        </li>
           <h3>Перфоратор BOSCH BFG 3000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/item-image_3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
            <span class="catalog-old-price"><span>22500</span>Р.</span>
            <span class="catalog-new-price"><span>15500</span>Р.</span>
        </li>
          <h3>Перфоратор BOSCH BFG 6000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <img src="img/item-image_6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
            <span class="catalog-old-price"><span>30500</span>Р.</span>
            <span class="catalog-new-price"><span>25500</span>Р.</span>
        </li>
          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="#" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/item-image_2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           <span class="catalog-new-price"><span>12500</span>Р.</span>
        </li>
          <h3>Перфоратор BOSCH BFG 3000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/item-image_3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
            <span class="catalog-old-price"><span>22500</span>Р.</span>
            <span class="catalog-new-price"><span>15500</span>Р.</span>
        </li>
          <h3>Перфоратор BOSCH BFG 6000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <img src="img/item-image_6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
            <span class="catalog-old-price"><span>30500</span>Р.</span>
            <span class="catalog-new-price"><span>25500</span>Р.</span>
        </li>
          <h3>Перфоратор BOSCH BFG 2000</h3>
-           <img src="#" alt="Перфоратор BOSCH BFG 2000">
+           <img src="img/item-image_2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
            <span class="catalog-new-price"><span>12500</span>Р.</span>
        </li>
     </ul>
@@ -152,8 +153,8 @@
       <li class="pagination-item"><a href="#">1</a></li>
       <li class="pagination-item panagination-item-current"><a>2</a></li>
       <li class="pagination-item"><a href="#">3</a></li>
+      <li class="pagination-item"><a href="#">Следующая</a></li>
     </ul>
-    <button class="button-next" type="button">Следующая</button>
 </section>
 <!--Описание товара-->
   <article class="good-discription">
@@ -166,7 +167,7 @@
   <footer class="catalog-footer">
  <!--Логотип-->
     <a class="down-header-logo">
-      <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
+      <img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип Техномарт">
     </a>
  <!--Навигация подвал-->
    <ul class="down-site-navigation">
