--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт "Интернет магазин для строительства и ремонта"</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 <body>
  <header class="main-header">
+  <div class="top-menu">
   <!--Логотип-->
       <a class="top-header-logo">
-        <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип Техномарт">
       </a>
   <!--Поиск-->
     <form action="" method="get">
@@ -20,7 +25,8 @@
     <a href="basket.html">Корзина:<span>0</span></a>
     <a href="order.html">Оформление заказа</a>
   <!--Телефон и адрес-->
-    <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
+    <p><a class="top-phone" href="tel:+78125550555">+7(812) 555-05-55</a></p>
+    <p class="top-adress">г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
   <!--Регистрация и вход-->
      <ul class="user-navigation">
        <li> <a href="login-link">Вход:</a></li>
@@ -38,6 +44,7 @@
       <li><a href="contacts.html">Контакты</a></li>
      </ul>
    </nav>
+  </div>
  </header>
 <main class="supermarket-main">
         <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
@@ -68,22 +75,22 @@
           <ul class="popular-goods-list">
             <li class="popular-goods-item">
               <h3>Перфоратор BOSCH BFG 9000</h3>
-              <img src="#" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/item-image_9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
               <span class="popular-old-price"><span>32500</span>Р.</span>
               <span class="popular-new-price"><span>25500</span>Р.</span>
             </li>
               <h3>Перфоратор BOSCH BFG 3000</h3>
-              <img src="#" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/item-image_3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="popular-old-price"><span>22500</span>Р.</span>
               <span class="popular-new-price"><span>15500</span>Р.</span>
             </li>
             <h3>Перфоратор BOSCH BFG 6000</h3>
-              <img src="#" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/item-image_6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="popular-old-price"><span>30500</span>Р.</span>
               <span class="popular-new-price"><span>25500</span>Р.</span>
             </li>
             <h3>Перфоратор BOSCH BFG 2000</h3>
-              <img src="#" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/item-image_2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="popular-old-price"><span>22500</span>Р.</span>
             </li>
       </section>
@@ -94,42 +101,42 @@
             <ul class="popular-brands-list">
                <li class="popular-brands-item">
                  <a class="popular-brands-main" href="popular-brands.html">
-                   <img src="#" alt="Популярный производитель">
+                   <img src="img/bosch.jpg" width="126" height="37" alt="Производитель Bosch">
                    </a>
                </li>
                <li class="popular-brands-item">
                 <a class="popular-brands-main" href="popular-brands.html">
-                    <img src="#" alt="Популярный производитель">
+                    <img src="img/makita.jpg" width="123" height="40" alt="Производитель Makita">
                    </a>
                </li>
                <li class="popular-brands-item">
                  <a class="popular-brands-main" href="popular-brands.html">
-                     <img src="#" alt="Популярный производитель">
+                     <img src="img/de-walt.jpg" width="146" height="44" alt="Производитель DeWalt">
                     </a>
                </li>
                <li class="popular-brands-item">
                   <a class="popular-brands-main" href="popular-brands.html">
-                     <img src="#" alt="Популярный производитель">
+                     <img src="img/interskol.jpg" width="200" height="88" alt="Производитель Интерскол">
                     </a>
                </li>
                <li class="popular-brands-item">
                   <a class="popular-brands-main" href="popular-brands.html">
-                       <img src="#" alt="Популярный производитель">
-                      </a>
+                     <img src="img/hitachi.jpg" width="169" height="31" alt="Производитель Hitachi">
+                    </a>
                </li>
                <li class="popular-brands-item">
                  <a class="popular-brands-main" href="popular-brands.html">
-                       <img src="#" alt="Популярный производитель">
-                      </a>
+                     <img src="img/lg.jpg" width="121" height="72" alt="Производитель LG">
+                    </a>
                </li>
                <li class="popular-brands-item">
                  <a class="popular-brands-main" href="popular-brands.html">
-                       <img src="#" alt="Популярный производитель">
-                      </a>
+                     <img src="img/aeg.jpg" width="151" height="96" alt="Производитель AEG">
+                    </a>
                </li>
                <li class="popular-brands-item">
                  <a class="popular-brands-main" href="popular-brands.html">
-                       <img src="#" alt="Популярный производитель">
+                       <img src="img/metabo.jpg" width="204" height="69" alt="Производитель Metabo">
                      </a>
                </li>
               </ul>
@@ -173,17 +180,17 @@
           <p>
             Вы можете забрать товар сами, заехав в наш офис:
           </p>
-          <a class="map-main" img src="#" width="100" height="100" alt="улица Большая Конюшенная дом 19"></a>
+          <a class="map-main"> <img src="img/map-small.jpg" width="300" height="158" alt="улица Большая Конюшенная дом 19"></a>
        <!--Здесь будет форма обращения-->
         </section>
         <section>
-          <a class="button" href="writeus.html">Заблудились?Напишите нам!</a>
+          <a class="button" href="writeus">Заблудились?Напишите нам!</a>
         </section>
       </main>
     <footer class="main-footer">
   <!--Логотип-->
       <a class="down-header-logo">
-        <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип Техномарт">
       </a>
   <!--Навигация подвал-->
     <ul class="down-site-navigation">
@@ -206,7 +213,7 @@
          © 2010-2019 Компания "Техномарт"<br> Все права защищены
       </p>
     <!--Адрес и телефон-->
-      <p class="footer-phone">
+      <p class="footer-contact">
         <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
       </p>
     <!--Соц.сети-->
@@ -226,19 +233,25 @@
        </p>
     </footer>
   <!--Форма Обращение-->
-       <section class="modal modal-write-us">
+       <section class="modal modal-writeus">
          <h2 class="visually-hidden">Заблудились?Напишите нам!</h2>
-         <!--Здесь будет форма-->
-         <span class="modal-close">x</span>
+         <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+          <p>
+            <label class="visually-hidden" for="your-name">Ваше имя</label>
+            <input class="your-name-icon" id="your-name" type="text" name="name" placeholder="Имя Фамилия">
+            <label class="visually-hidden" for="your-email">Ваш e-mail:</label>
+            <input class="your-email-icon" id="your-email" type="text" name="email" placeholder="email@example.com">
+            <label class="visually-hidden" for="your-message">Текст письма:</label>
+            <input class="your-message-icon" id="your-message" type="text" name="message" placeholder="В свободной форме">
+          </p>
+         <button class="send-mesage" type="button">Отправить</button>
+         <button class="modal-close" type="button">X</button>
        </section>
   <!--Карта-->
        <section class="modal modal-map">
          <h2 class="visually-hidden">Карта</h2>
-         <p>
-          <a img src="img/map.jpg width="100" height="100" alt=""Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-        </p>
-        <button class="modal-close" type="button">Закрыть</button>
-         <span class="modal-close">x</span>
+          <img src="img/map-hq.jpg" width="940" height="446.2" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+          <button class="modal-close" type="button">X</button>
        </section>
     </body>
   </html>
