--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Техномарт "Интернет магазин для строительства и ремонта"</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -13,20 +14,25 @@
   <div class="top-menu">
   <!--Логотип-->
       <a class="top-header-logo">
-        <img src="img/logo-technomart.svg" width="109" height="19" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.png" width="109" height="19" alt="Логотип Техномарт">
       </a>
+  <div class="container"
   <!--Поиск-->
-    <form action="" method="get">
-     <button type="submit"></button>
-     <input placeholder="Поиск:" type="search">
-    </form>
+      <form class="search-box" action="#" method="get">
+       <button type="submit"></button>
+       <input placeholder="Поиск:" type="search">
+      </form>
   <!--Закладки, Корзина и Оформление заказа-->
-    <a href="bookmarks.html">Закладки:<span>0</span></a>
-    <a href="basket.html">Корзина:<span>0</span></a>
-    <a href="order.html">Оформление заказа</a>
+   <a class="bookmarks-top"href="bookmarks.html">Закладки:<span>0</span></a>
+   <a class="basket-top" href="basket.html">Корзина:<span>0</span></a>
+   <a class="order-top" href="order.html">Оформление заказа</a>
+    </div>
+   </div>
   <!--Телефон и адрес-->
     <p><a class="top-phone" href="tel:+78125550555">+7(812) 555-05-55</a></p>
     <p class="top-adress">г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
+  <!--Девиз-->
+    <p class="slogan">Интернет магазин строительных материалов и инструментов для ремонта</p>
   <!--Регистрация и вход-->
      <ul class="user-navigation">
        <li> <a href="login-link">Вход:</a></li>
@@ -47,95 +53,114 @@
   </div>
  </header>
 <main class="supermarket-main">
-        <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
-  <!--Слайдер с рекламой-->
- <section class="slider-top">
-    <ul class="advertising-slider">
-      <li class="slide-showing">Slide 1</li>
-      <li class="slide">Slide 2</li>
-    </ul>
-  <a class="prev" onclick="plusslider(-1)">&#10094;</a>
-  <a class="next" onclick="plusslider(1)">&#10095;</a>
-  <div class="dot-container">
-    <span class="dot" onclick="currentslide1"></span>
-    <span class="dot" onclick="currentslide2"></span>
-  </div>
-  <a href="drill.html">Открыть каталог</a>
- </section>
+        <h1 class="visually-hidden">Интернет магазин строительных материалов и инструментов для ремонта</h1>
+<div class="commercial">
   <!--Товары и услуги-->
      <div class="materials">Материалы<a class="botton" href="materials.html">На любой вкус</a></div>
      <div class="tools">Инструменты<a class="botton" href="tools.html">На все случаи</a></div>
      <div class="equipment">Техника<a class="botton" href="equipment.html">Для стройки</a></div>
      <div class="sale">Скидки 50%<a class="botton" href="sale.html">На 350 товаров</a></div>
      <div class="delivery">Доставка<a class="botton" href="delivery.html">Бесплатно</a></div>
+ <!--Слайдер с рекламой-->
+    <section class="slider-top">
+     <img class="slader-image" src="img/slider-image.jpg" width="620" height="266" alt="Дрели">
+     <a href="drill.html">Открыть каталог</a>
+    </section>
+  </div>
   <!--Популярные товары-->
     <section class="popular-goods">
       <h2>Популярные товары</h2>
-        <a href="popular-goods.html">Все популярные товары</a>
+        <a class="all-popular-goods" href="popular-goods.html">Все популярные товары</a>
           <ul class="popular-goods-list">
             <li class="popular-goods-item">
-              <h3>Перфоратор BOSCH BFG 9000</h3>
-              <img src="img/item-image_9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
-              <span class="popular-old-price"><span>32500</span>Р.</span>
-              <span class="popular-new-price"><span>25500</span>Р.</span>
+              <h3 class="visually-hidden">Перфоратор BOSCH BFG 9000</h3>
+                <div class="action">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
+                </div>
+              <img class="image" src="img/item-image_9000.jpg" width="218" height="168" alt="Перфоратор BOSCH BFG 9000">
+              <p class="popular-name">Перфоратор BOSCH BFG 9000</p>
+              <p class="popular-old-price"><span>32500</span>Р.</p>
+              <p class="popular-new-price"><span>25500</span>Р.</p>
             </li>
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <img src="img/item-image_3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-              <span class="popular-old-price"><span>22500</span>Р.</span>
-              <span class="popular-new-price"><span>15500</span>Р.</span>
+            <li class="popular-goods-item">
+              <h3 class="visually-hidden">Перфоратор BOSCH BFG 3000</h3>
+                <div class="action">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
+                </div>
+               <img class="image" src="img/item-image_3000.jpg" width="218" height="168" alt="Перфоратор BOSCH BFG 9000">
+               <p class="popular-name">Перфоратор BOSCH BFG 3000</p>
+               <p class="popular-old-price"><span>22500</span>Р.</p>
+               <p class="popular-new-price"><span>15500</span>Р.</p>
+             </li>
+            <li class="popular-goods-item">
+               <h3 class="visually-hidden">Перфоратор BOSCH BFG 6000</h3>
+                <div class="action">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
+                </div>
+                <img class="image" src="img/item-image_6000.jpg" width="218" height="168" alt="Перфоратор BOSCH BFG 9000">
+                <p class="popular-name">Перфоратор BOSCH BFG 6000</p>
+                <p class="popular-old-price"><span>30500</span>Р.</p>
+                <p class="popular-new-price"><span>25500</span>Р.</p>
             </li>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-              <img src="img/item-image_6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-              <span class="popular-old-price"><span>30500</span>Р.</span>
-              <span class="popular-new-price"><span>25500</span>Р.</span>
+            <li class="popular-goods-item">
+            <h3 class="visually-hidden">Перфоратор BOSCH BFG 2000</h3>
+              <img class="new-flag" src="img/new-flag.png"/>
+              <div class="action">
+                <a class="buy" href="#">Купить</a>
+                <a class="bookmark" href="#">В закладки</a>
+              </div>
+              <img class="image" src="img/item-image_2000.jpg" width="218" height="168" alt="Перфоратор BOSCH BFG 9000">
+              <p class="popular-name">Перфоратор BOSCH BFG 2000</p>
+              <p class="popular-old-price"><span></span></p>
+              <p class="popular-new-price"><span>12500</span>Р.</p>
             </li>
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-              <img src="img/item-image_2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-              <span class="popular-old-price"><span>22500</span>Р.</span>
-            </li>
+         </ul>
       </section>
   <!--Популярные производители-->
       <section class="popular-brands">
         <h2>Популярные производители</h2>
-          <a href="popular-brands.html">Все популярные производители</a>
+          <a class="all-popular-brands" href="popular-brands.html">Все популярные производители</a>
             <ul class="popular-brands-list">
                <li class="popular-brands-item">
-                 <a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main-1" href="popular-brands.html">
                    <img src="img/bosch.jpg" width="126" height="37" alt="Производитель Bosch">
                    </a>
                </li>
                <li class="popular-brands-item">
-                <a class="popular-brands-main" href="popular-brands.html">
+                <a class="popular-brands-main-2" href="popular-brands.html">
                     <img src="img/makita.jpg" width="123" height="40" alt="Производитель Makita">
                    </a>
                </li>
                <li class="popular-brands-item">
-                 <a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main-3" href="popular-brands.html">
                      <img src="img/de-walt.jpg" width="146" height="44" alt="Производитель DeWalt">
                     </a>
                </li>
                <li class="popular-brands-item">
-                  <a class="popular-brands-main" href="popular-brands.html">
+                  <a class="popular-brands-main-4" href="popular-brands.html">
                      <img src="img/interskol.jpg" width="200" height="88" alt="Производитель Интерскол">
                     </a>
                </li>
                <li class="popular-brands-item">
-                  <a class="popular-brands-main" href="popular-brands.html">
+                  <a class="popular-brands-main-5" href="popular-brands.html">
                      <img src="img/hitachi.jpg" width="169" height="31" alt="Производитель Hitachi">
                     </a>
                </li>
                <li class="popular-brands-item">
-                 <a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main-6" href="popular-brands.html">
                      <img src="img/lg.jpg" width="121" height="72" alt="Производитель LG">
                     </a>
                </li>
                <li class="popular-brands-item">
-                 <a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main-7" href="popular-brands.html">
                      <img src="img/aeg.jpg" width="151" height="96" alt="Производитель AEG">
                     </a>
                </li>
                <li class="popular-brands-item">
-                 <a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main-8" href="popular-brands.html">
                        <img src="img/metabo.jpg" width="204" height="69" alt="Производитель Metabo">
                      </a>
                </li>
@@ -147,7 +172,7 @@
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="service-list">
             <li class="service-item">
-              <a class="delivery" href="#">Доставка</a>
+              <a class="shipping" href="#">Доставка</a>
             </li>
             <li class="service-item">
               <a class="warranty" href="#">Гарантия</a>
